--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
+		"typescript-svelte-plugin": "^0.3.33",
 		"vite": "^4.4.9",
 		"vitest": "^0.34.6"
 	},
