--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	],
 	"peerDependencies": {
 		"@lingui/core": "^4.5.0",
-		"svelte": "^4.0.0"
+		"svelte": "4.x"
 	},
 	"devDependencies": {
 		"@lingui/cli": "^4.5.0",
@@ -51,7 +51,6 @@
 		"publint": "^0.2.3",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
-		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"typescript-svelte-plugin": "^0.3.33",
@@ -62,6 +61,8 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"acorn": "^8.10.0"
+		"acorn": "^8.10.0",
+		"js-sha256": "^0.10.1",
+		"svelte-preprocess": "^5.0.4"
 	}
 }
