feat: new package name, basic interpolation component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lingui-svelte",
+	"name": "svelte-i18n-lingui",
 	"version": "0.0.1",
 	"author": "Henry Roes Lie",
 	"license": "MIT",
