fix: module resolution, jsdoc types, docs updates

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,6 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "bundler"
 	}
 }
