chore: remove playwright since unit tests are enough

--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"test": "npm run test:integration && npm run test:unit",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest",
+		"test": "vitest",
 		"extract": "lingui extract",
 		"compile": "lingui compile --typescript"
 	},
@@ -49,7 +47,6 @@
 		"@lingui/cli": "^4.5.0",
 		"@lingui/conf": "^4.5.0",
 		"@lingui/core": "^4.5.0",
-		"@playwright/test": "^1.38.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.25.1",
 		"@sveltejs/package": "^2.2.2",
