fix(#5): use prepare instead of postinstall

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"localization"
 	],
 	"scripts": {
-		"postinstall": "svelte-kit sync",
+		"prepare": "svelte-kit sync",
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
