--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-i18n-lingui",
-	"version": "0.1.7",
+	"version": "0.2.0-next.0",
 	"author": "Henry Roes Lie",
 	"license": "MIT",
 	"description": "Add i18n to Svelte/Sveltekit projects using Lingui, using message as the catalog id",
