feat: update svelte to v5 + other deps, migrate syntax with TODO

--- a/package.json
+++ b/package.json
@@ -61,32 +61,33 @@
 		"@lingui/cli": "^4.5.0",
 		"@lingui/conf": "^4.5.0",
 		"@lingui/core": "^4.5.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.26.0",
-		"@sveltejs/package": "^2.2.2",
-		"@sveltejs/vite-plugin-svelte": "^2.4.6",
-		"@testing-library/svelte": "^4.0.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/package": "^2.3.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@testing-library/svelte": "^5.2.4",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.34.0",
+		"eslint-plugin-svelte": "^2.45.1",
 		"jsdom": "^22.1.0",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.2.6",
 		"publint": "^0.2.5",
-		"svelte": "^4.2.2",
-		"svelte-check": "^3.5.2",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"typescript-svelte-plugin": "^0.3.34",
-		"vite": "^4.5.0",
-		"vitest": "^0.34.6"
+		"typescript": "^5.5.0",
+		"typescript-svelte-plugin": "^0.3.42",
+		"vite": "^5.4.4",
+		"vitest": "^1.0.0"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"@typescript-eslint/typescript-estree": "^6.8.0",
+		"@typescript-eslint/typescript-estree": "^8.12.2",
+		"estree-walker": "^3.0.3",
 		"js-sha256": "^0.10.1",
-		"svelte-preprocess": "^5.0.4"
+		"svelte-preprocess": "^6.0.0"
 	}
 }
