--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
 	"dependencies": {
 		"@typescript-eslint/typescript-estree": "^8.12.2",
 		"estree-walker": "^3.0.3",
-		"js-sha256": "^0.10.1",
-		"svelte-preprocess": "^6.0.0"
+		"js-sha256": "^0.10.1"
 	}
 }
