docs: readme reformat, added new syntax info and migration guide

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"multilingual",
 		"translation",
 		"internationalization",
-		"localization"
+		"localization",
+		"gettext"
 	],
 	"scripts": {
 		"prepare": "svelte-kit sync",
