chore: set lingui peerdep to allow both v4 and v5

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"@lingui/core": "^4.5.0",
+		"@lingui/core": ">=4",
+		"@lingui/cli": ">=4",
 		"svelte": ">=4"
 	},
 	"devDependencies": {
